--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jsonwebtoken": "^9.0.2",
+    "mv": "^2.1.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.12.0",
+    "node-schema-object": "^3.3.4",
     "recursive-readdir": "^2.2.3",
     "restify": "^11.1.0",
-    "restify-eventsource": "^2.0.0"
+    "restify-eventsource": "^2.0.0",
+    "spdy": "^4.0.2"
   }
 }
